pgsql,quite los timestamp,apilogin,firebase

--- a/public/css/plantilla.css
+++ b/public/css/plantilla.css
@@ -7752,7 +7752,15 @@ base-chart.chart {
 
 .progress-sm {
   height: 8px; }
+  td{
+    text-align:center;
+    vertical-align:middle;
+   }
 
+   th{
+    text-align:center;
+    vertical-align:middle;
+   }
 .progress-white {
   background-color: rgba(255, 255, 255, 0.2) !important; }
   .progress-white .progress-bar {
